Merge up differences between Jetty 12.1.x ee10 vs ee11 into Jetty 13 ee-common (#15225)
* Merge up differences between Jetty 12.1.x ee10 vs ee11 into Jetty 13 ee-common
* Correct message about forking.
* Environment classloader should have the name of the environment.
* Easier to find jetty.base for debugging reasons.
* Improved ServletApiVersion and WebsocketApiVersion for non standard deployments.
* Improve handling of deprecated `useFileMappedBuffer`
* Introduce ServletApiVersion.getWebXmlAttributes() to replace hardcoded WebDescriptor.WEB_APP_ELEMENT
* More ServletApiVersion enums and WebXmlAttributes

---------

Signed-off-by: Olivier Lamy <olamy@apache.org>
Co-authored-by: Olivier Lamy <olamy@apache.org>